fixing all the problems in the meals page. everything will be aligned

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,6 +8,9 @@
   padding: 0px 50px;
   font-size: 12px;
   margin-top: 20px;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-copyright a {
